<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteShade"
    tools:context="NavFragments.TermsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/newbblogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amaranth_italic"
                android:gravity="center"
                android:text="Terms and Conditions"
                android:textColor="@color/colorBlack"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:text="@string/terms"
                android:textColor="@color/colorGrayDark"
                android:id="@+id/ContactUsTV" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/amaranth"
                android:gravity="left"
                android:text="Cancellation Policy"
                android:textColor="@color/colorBlack"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:text="@string/cancellation"
                android:textColor="@color/colorGrayDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/amaranth"
                android:gravity="left"
                android:text="Replacement Policy"
                android:textColor="@color/colorBlack"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:text="@string/replacement"
                android:textColor="@color/colorGrayDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/amaranth"
                android:gravity="left"
                android:text="Modification of Terms and Condition of Service"
                android:textColor="@color/colorBlack"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:text="@string/modification"
                android:textColor="@color/colorGrayDark"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/amaranth"
                android:gravity="left"
                android:text="Delivery Policy"
                android:textColor="@color/colorBlack"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:text="@string/Delivery"
                android:textColor="@color/colorGrayDark"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>